# slingswarm

./: .slingshot.vala.swp  AUTHORS  CMakeLists.txt  INSTALL  README.md  slingshot.vala
backend/: GMenuEntries.vala
cmake/Vala_CMake/: README.rst
cmake/vala/: ValaPrecompile.cmake
debian/: changelog  copyright
debian2/: control
fix/: unique-3.0.vapi
frontend/widgets/: AppItem.vala  CompositedWindow.vala  Grid.vala  Indicators.vala  Searchbar.vala
icon/: slingswarm-launcher.xcf
usr/: slingswarm-launcher.desktop
